@@ -28,6 +28,8 @@ update-manager (1:0.131) UNRELEASED; urgency=low
       with proper parent
   * AutoUpgradeTester/post_upgrade_tests:
     - add python import, xorg and kernel tests
+  * UpdateManager/dialog_release_notes.ui:
+    - merged lp:~freinhard/update-manager/ui-fix (many thanks)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 03 Nov 2009 16:05:01 +0100
 
